Fixed English version typo.

--- a/app/lang/lang.json
+++ b/app/lang/lang.json
@@ -58,7 +58,7 @@
                         ]
                     },
                     {
-                        "name": "Back End Web",
+                        "name": "Back End Dev",
                         "sublist": [
                             "Express",
                             "Vert.x",
